[package]
name = "iced"
version = "0.3.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A cross-platform GUI library inspired by Elm"
license = "MIT"
repository = "https://github.com/iced-rs/iced"
documentation = "https://docs.rs/iced"
readme = "README.md"
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
categories = ["gui"]
resolver = "2"

[features]
default = ["wgpu", "default_system_font"]

# Force dynamic linking, which improves iterative compile times
dynamic = ["iced_dynamic"]

# See ./internal/Cargo.toml for descriptions
wgpu = ["iced_internal/wgpu"]
image = ["iced_internal/image"]
svg = ["iced_internal/svg"]
canvas = ["iced_internal/canvas"]
qr_code = ["iced_internal/qr_code"]
default_system_font = ["iced_internal/default_system_font"]
glow = ["iced_internal/glow"]
glow_canvas = ["iced_internal/canvas"]
glow_qr_code = ["iced_internal/qr_code"]
glow_default_system_font = ["iced_internal/default_system_font"]
debug = ["iced_internal/debug"]
tokio = ["iced_internal/tokio"]
async-std = ["iced_internal/async-std"]
smol = ["iced_internal/smol"]
palette = ["iced_internal/palette"]

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "internal",
    "dynamic",
    "core",
    "futures",
    "graphics",
    "glow",
    "glutin",
    "lazy",
    "native",
    "style",
    "web",
    "wgpu",
    "winit",
    "examples/bezier_tool",
    "examples/clock",
    "examples/color_palette",
    "examples/component",
    "examples/counter",
    "examples/custom_widget",
    "examples/download_progress",
    "examples/events",
    "examples/exit",
    "examples/game_of_life",
    "examples/geometry",
    "examples/integration_opengl",
    "examples/integration_wgpu",
    "examples/pane_grid",
    "examples/pick_list",
    "examples/pokedex",
    "examples/progress_bar",
    "examples/qr_code",
    "examples/scrollable",
    "examples/solar_system",
    "examples/stopwatch",
    "examples/styling",
    "examples/svg",
    "examples/todos",
    "examples/tooltip",
    "examples/tour",
    "examples/url_handler",
    "examples/websocket",
]

[dependencies]
iced_dynamic = { version = "0.3.0", path = "dynamic", default-features = false, optional = true }
iced_internal = { version = "0.3.0", path = "internal", default-features = false }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["image", "svg", "canvas", "qr_code"]
